# merge-ready

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml  mise.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-security.yml  release-pr.yml  release-prepare.yml  release-publish.yml  release.yml
benches/: hot_path.rs
contexts/configuration/domain/: Cargo.toml
contexts/configuration/domain/src/: config.rs  repository.rs
contexts/configuration/infrastructure/: Cargo.toml
contexts/configuration/infrastructure/src/: toml_loader.rs
contexts/merge_readiness/application/: Cargo.toml
contexts/merge_readiness/application/src/: branch_sync.rs  cache.rs  ci_checks.rs  errors.rs  lib.rs  merge_ready.rs  pr_state.rs  prompt.rs  review.rs
contexts/merge_readiness/domain/: Cargo.toml
contexts/merge_readiness/domain/src/: branch_sync.rs  ci_checks.rs  merge_ready.rs  pr_state.rs  review.rs
contexts/merge_readiness/infrastructure/: CHANGELOG.md  Cargo.toml
contexts/merge_readiness/infrastructure/src/: cache.rs  gh.rs  lib.rs  logger.rs  refresh_lock.rs  repo_id.rs  tmp_cache_dir.rs
contexts/merge_readiness/interface/: Cargo.toml
contexts/merge_readiness/interface/src/: cli.rs  presentation.rs
scripts/: check-layer-deps.sh  check-no-mod-rs.sh  check-protocol-deps.sh  test-check-layer-deps.sh
src/: adapters.rs  app.rs  application.rs  cached.rs  cli.rs  contexts.rs  domain.rs  infra.rs  lib.rs  main.rs  presentation.rs  refresh.rs
src/application/: branch_sync.rs  cache.rs  ci_checks.rs  errors.rs  merge_ready.rs  pr_state.rs  prompt.rs  review.rs
src/cli/: args.rs  help.rs  prompt.rs
src/cli/prompt/: args.rs  cached.rs  direct.rs  refresh.rs
src/contexts/: README.md  configuration.rs  evaluation.rs  merge_readiness.rs  status_cache.rs
src/contexts/config/: application.rs  infrastructure.rs
src/contexts/config/application/: config_service.rs  config_updater.rs  port.rs
src/contexts/config/domain/: config.rs  repository.rs
src/contexts/config/infrastructure/: toml_loader.rs
src/contexts/config/interface/: cli.rs
src/contexts/configuration/: README.md  application.rs
src/contexts/configuration/application/: config_service.rs  config_updater.rs
src/contexts/configuration/domain/: config.rs  repository.rs
src/contexts/configuration/infrastructure/: toml_loader.rs
src/contexts/daemon/: domain.rs  infrastructure.rs
src/contexts/daemon/application/: cache.rs  lifecycle.rs
src/contexts/daemon/domain/: cache.rs  daemon.rs  refresh_policy.rs
src/contexts/daemon/infrastructure/: daemon_client.rs  daemon_lifecycle.rs  daemon_server.rs  paths.rs  pid.rs  protocol.rs  repo_id.rs
src/contexts/evaluation/: application.rs  domain.rs  infrastructure.rs  interface.rs
src/contexts/evaluation/application/: branch_sync.rs  ci_checks.rs  config_service.rs  errors.rs  merge_ready.rs  port.rs  pr_state.rs  prompt.rs  review.rs  unblocked.rs
src/contexts/evaluation/domain/: branch_sync.rs  ci_checks.rs  display_config.rs  error.rs  format_parser.rs  policy.rs  pr_state.rs  review.rs  style_spec.rs  unblocked.rs
src/contexts/evaluation/infrastructure/: gh.rs  git.rs  logger.rs  toml_loader.rs
src/contexts/evaluation/interface/: presentation.rs  prompt.rs
src/contexts/merge_readiness/: README.md  application.rs  domain.rs  infrastructure.rs  interface.rs
src/contexts/prompt/: application.rs
src/contexts/status_cache/: README.md  application.rs  domain.rs  infrastructure.rs  mod.rs
src/domain/: branch_sync.rs  ci_checks.rs  error.rs  merge_ready.rs  pr_state.rs  review.rs
src/infra/: cache.rs  gh.rs  logger.rs  pr_client.rs  refresh_lock.rs  repo_id.rs
src/protocol/: protocol.rs
src_prompt/: main.rs
tests/e2e/: branch_sync.rs  cache.rs  ci_checks.rs  cli.rs  config.rs  daemon.rs  errors.rs  helpers.rs  merge_ready.rs  mod.rs  pr_state.rs  review.rs
tests/e2e/cli/: flags.rs
tests/e2e/config/: config.rs
tests/e2e/configuration/: config.rs
tests/e2e/daemon/: lifecycle.rs
tests/e2e/helpers/: daemon_handle.rs  env.rs  mod.rs  multi_repo.rs
tests/e2e/interface/: cli.rs
tests/e2e/merge_readiness/: branch_sync.rs  ci_checks.rs  errors.rs  merge_ready.rs  pr_state.rs  review.rs
tests/e2e/prompt/: branch_sync.rs  ci_checks.rs  errors.rs  merge_ready.rs  mod.rs  pr_state.rs  review.rs  style.rs
tests/e2e/scenarios/: cache_hit.rs  default_branch.rs  initial_load.rs  mod.rs  multi_repo.rs  no_pr.rs  no_repo.rs  stale.rs  terminal_pr.rs
tests/e2e/status_cache/: cache.rs  daemon.rs  mod.rs
(+104 files in other folders)
