[workspace]
members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/toshiki670/merge-ready"
homepage = "https://github.com/toshiki670/merge-ready"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"

[package]
name = "merge-ready"
version.workspace = true
edition.workspace = true
description = "Show pull request merge blockers as concise prompt tokens"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["pull-request", "cli", "prompt", "developer-tools", "merge"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.8", features = ["html_reports"] }
predicates = "3"
serde_json.workspace = true
tempfile.workspace = true

[[bench]]
name = "hot_path"
harness = false
