[package]
name = "merge-ready"
version = "0.1.2"
edition = "2024"
rust-version = "1.95"
description = "Show pull request merge blockers as concise prompt tokens"
license = "MIT"
repository = "https://github.com/toshiki670/merge-ready"
homepage = "https://github.com/toshiki670/merge-ready"
readme = "README.md"
keywords = ["pull-request", "cli", "prompt", "developer-tools", "merge"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo"] }
daemonize = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"

[dev-dependencies]
assert_cmd = "2.2.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
predicates = "3.1.4"
serde_json = "1.0.149"
tempfile = "3.27.0"

[[bench]]
name = "hot_path"
harness = false
