[package]
name = "configuration-infrastructure"
version = "0.1.1"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
configuration-domain = { path = "../domain" }
serde.workspace = true
toml.workspace = true
